// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "default",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        "10",
        "20",
        "30",
        "40",
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": false,
      "showTitle": true,
      "showTotal": undefined,
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.total - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.total",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        "10",
        "20",
        "30",
        "40",
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": false,
      "showTitle": true,
      "showTotal": undefined,
      "simple": false,
      "size": undefined,
      "total": 500,
    },
    Object {},
  ],
]
`;
